learning of tokenizer class

--- a/learning/tokenization_2.ipynb
+++ b/learning/tokenization_2.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: b'<|endoftext|>', 1: b'\\x00', 2: b'\\x01', 3: b'\\x02', 4: b'\\x03', 5: b'\\x04', 6: b'\\x05', 7: b'\\x06', 8: b'\\x07', 9: b'\\x08', 10: b'\\t', 11: b'\\n', 12: b'\\x0b', 13: b'\\x0c', 14: b'\\r', 15: b'\\x0e', 16: b'\\x0f', 17: b'\\x10', 18: b'\\x11', 19: b'\\x12', 20: b'\\x13', 21: b'\\x14', 22: b'\\x15', 23: b'\\x16', 24: b'\\x17', 25: b'\\x18', 26: b'\\x19', 27: b'\\x1a', 28: b'\\x1b', 29: b'\\x1c', 30: b'\\x1d', 31: b'\\x1e', 32: b'\\x1f', 33: b' ', 34: b'!', 35: b'\"', 36: b'#', 37: b'$', 38: b'%', 39: b'&', 40: b\"'\", 41: b'(', 42: b')', 43: b'*', 44: b'+', 45: b',', 46: b'-', 47: b'.', 48: b'/', 49: b'0', 50: b'1', 51: b'2', 52: b'3', 53: b'4', 54: b'5', 55: b'6', 56: b'7', 57: b'8', 58: b'9', 59: b':', 60: b';', 61: b'<', 62: b'=', 63: b'>', 64: b'?', 65: b'@', 66: b'A', 67: b'B', 68: b'C', 69: b'D', 70: b'E', 71: b'F', 72: b'G', 73: b'H', 74: b'I', 75: b'J', 76: b'K', 77: b'L', 78: b'M', 79: b'N', 80: b'O', 81: b'P', 82: b'Q', 83: b'R', 84: b'S', 85: b'T', 86: b'U', 87: b'V', 88: b'W', 89: b'X', 90: b'Y', 91: b'Z', 92: b'[', 93: b'\\\\', 94: b']', 95: b'^', 96: b'_', 97: b'`', 98: b'a', 99: b'b', 100: b'c', 101: b'd', 102: b'e', 103: b'f', 104: b'g', 105: b'h', 106: b'i', 107: b'j', 108: b'k', 109: b'l', 110: b'm', 111: b'n', 112: b'o', 113: b'p', 114: b'q', 115: b'r', 116: b's', 117: b't', 118: b'u', 119: b'v', 120: b'w', 121: b'x', 122: b'y', 123: b'z', 124: b'{', 125: b'|', 126: b'}', 127: b'~', 128: b'\\x7f', 129: b'\\x80', 130: b'\\x81', 131: b'\\x82', 132: b'\\x83', 133: b'\\x84', 134: b'\\x85', 135: b'\\x86', 136: b'\\x87', 137: b'\\x88', 138: b'\\x89', 139: b'\\x8a', 140: b'\\x8b', 141: b'\\x8c', 142: b'\\x8d', 143: b'\\x8e', 144: b'\\x8f', 145: b'\\x90', 146: b'\\x91', 147: b'\\x92', 148: b'\\x93', 149: b'\\x94', 150: b'\\x95', 151: b'\\x96', 152: b'\\x97', 153: b'\\x98', 154: b'\\x99', 155: b'\\x9a', 156: b'\\x9b', 157: b'\\x9c', 158: b'\\x9d', 159: b'\\x9e', 160: b'\\x9f', 161: b'\\xa0', 162: b'\\xa1', 163: b'\\xa2', 164: b'\\xa3', 165: b'\\xa4', 166: b'\\xa5', 167: b'\\xa6', 168: b'\\xa7', 169: b'\\xa8', 170: b'\\xa9', 171: b'\\xaa', 172: b'\\xab', 173: b'\\xac', 174: b'\\xad', 175: b'\\xae', 176: b'\\xaf', 177: b'\\xb0', 178: b'\\xb1', 179: b'\\xb2', 180: b'\\xb3', 181: b'\\xb4', 182: b'\\xb5', 183: b'\\xb6', 184: b'\\xb7', 185: b'\\xb8', 186: b'\\xb9', 187: b'\\xba', 188: b'\\xbb', 189: b'\\xbc', 190: b'\\xbd', 191: b'\\xbe', 192: b'\\xbf', 193: b'\\xc0', 194: b'\\xc1', 195: b'\\xc2', 196: b'\\xc3', 197: b'\\xc4', 198: b'\\xc5', 199: b'\\xc6', 200: b'\\xc7', 201: b'\\xc8', 202: b'\\xc9', 203: b'\\xca', 204: b'\\xcb', 205: b'\\xcc', 206: b'\\xcd', 207: b'\\xce', 208: b'\\xcf', 209: b'\\xd0', 210: b'\\xd1', 211: b'\\xd2', 212: b'\\xd3', 213: b'\\xd4', 214: b'\\xd5', 215: b'\\xd6', 216: b'\\xd7', 217: b'\\xd8', 218: b'\\xd9', 219: b'\\xda', 220: b'\\xdb', 221: b'\\xdc', 222: b'\\xdd', 223: b'\\xde', 224: b'\\xdf', 225: b'\\xe0', 226: b'\\xe1', 227: b'\\xe2', 228: b'\\xe3', 229: b'\\xe4', 230: b'\\xe5', 231: b'\\xe6', 232: b'\\xe7', 233: b'\\xe8', 234: b'\\xe9', 235: b'\\xea', 236: b'\\xeb', 237: b'\\xec', 238: b'\\xed', 239: b'\\xee', 240: b'\\xef', 241: b'\\xf0', 242: b'\\xf1', 243: b'\\xf2', 244: b'\\xf3', 245: b'\\xf4', 246: b'\\xf5', 247: b'\\xf6', 248: b'\\xf7', 249: b'\\xf8', 250: b'\\xf9', 251: b'\\xfa', 252: b'\\xfb', 253: b'\\xfc', 254: b'\\xfd', 255: b'\\xfe', 256: b'\\xff', 257: b' t', 258: b'he', 259: b' a', 260: b' s', 261: b' w', 262: b'nd', 263: b'ed', 264: b' f', 265: b' h', 266: b' the', 267: b'it', 268: b'er', 269: b'as', 270: b' to', 271: b'in', 272: b' d', 273: b'is', 274: b' b', 275: b'ie', 276: b're', 277: b'll', 278: b'ou', 279: b' and', 280: b'ay', 281: b' was', 282: b' n', 283: b' l', 284: b' T', 285: b' p', 286: b' o', 287: b' th', 288: b'me', 289: b' c', 290: b'at', 291: b' B', 292: b'uc', 293: b'en', 294: b'rie', 295: b'ow', 296: b'ne', 297: b'riend', 298: b' friend', 299: b' The'}\n",
-      "[(b' ', b't'), (b'h', b'e'), (b' ', b'a'), (b' ', b's'), (b' ', b'w'), (b'n', b'd'), (b'e', b'd'), (b' ', b'f'), (b' ', b'h'), (b' t', b'he'), (b'i', b't'), (b'e', b'r'), (b'a', b's'), (b' t', b'o'), (b'i', b'n'), (b' ', b'd'), (b'i', b's'), (b' ', b'b'), (b'i', b'e'), (b'r', b'e'), (b'l', b'l'), (b'o', b'u'), (b' a', b'nd'), (b'a', b'y'), (b' w', b'as'), (b' ', b'n'), (b' ', b'l'), (b' ', b'T'), (b' ', b'p'), (b' ', b'o'), (b' t', b'h'), (b'm', b'e'), (b' ', b'c'), (b'a', b't'), (b' ', b'B'), (b'u', b'c'), (b'e', b'n'), (b'r', b'ie'), (b'o', b'w'), (b'n', b'e'), (b'rie', b'nd'), (b' f', b'riend'), (b' T', b'he')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cs336_basics.pretokenization_example import find_chunk_boundaries\n",
     "import regex as re\n",
@@ -160,13 +151,233 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnpicklingError",
+     "evalue": "invalid load key, '{'.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnpicklingError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 98\u001b[0m\n\u001b[1;32m     93\u001b[0m         text \u001b[38;5;241m=\u001b[39m full_bytes\u001b[38;5;241m.\u001b[39mdecode(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     95\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m text\n\u001b[0;32m---> 98\u001b[0m tokenizer \u001b[38;5;241m=\u001b[39m \u001b[43mTokenizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_file\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m../tests/fixtures/gpt2_vocab.json\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m../tests/fixtures/gpt2_merges.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m<|endoftext|>\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m<|endoftext|><|endoftext|>\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[14], line 13\u001b[0m, in \u001b[0;36mTokenizer.from_file\u001b[0;34m(cls, vocab_path, merges_path, special_tokens)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfrom_file\u001b[39m(\u001b[38;5;28mcls\u001b[39m, vocab_path, merges_path, special_tokens\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(vocab_path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m---> 13\u001b[0m         vocab \u001b[38;5;241m=\u001b[39m \u001b[43mpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(merges_path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     15\u001b[0m         merges \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(f)\n",
+      "\u001b[0;31mUnpicklingError\u001b[0m: invalid load key, '{'."
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "import regex as re\n",
+    "class Tokenizer:\n",
+    "    def __init__(self, vocab, merges, special_tokens=None):\n",
+    "        self.vocab = vocab\n",
+    "        self.merges = merges\n",
+    "        self.special_tokens = special_tokens\n",
+    "        self.vocab_dict = {v: k for k, v in self.vocab.items()}\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_file(cls, vocab_path, merges_path, special_tokens=None):\n",
+    "        with open(vocab_path, \"rb\") as f:\n",
+    "            vocab = pickle.load(f)\n",
+    "        with open(merges_path, \"rb\") as f:\n",
+    "            merges = pickle.load(f)\n",
+    "        \n",
+    "        # Create and return a new instance\n",
+    "        return cls(vocab, merges, special_tokens)\n",
+    "\n",
+    "    def encode(self, text):\n",
+    "\n",
+    "        if self.special_tokens is None:\n",
+    "            special_token_pattern = []\n",
+    "\n",
+    "        else:\n",
+    "            special_token_pattern = \"|\".join(re.escape(token) for token in self.special_tokens)\n",
+    "            text = re.split(f\"({special_token_pattern})\", text)\n",
+    "\n",
+    "        PAT = r\"\"\"'(?:[sdmt]|ll|ve|re)| ?\\p{L}+| ?\\p{N}+| ?[^\\s\\p{L}\\p{N}]+|\\s+(?!\\S)|\\s+\"\"\"\n",
+    "\n",
+    "\n",
+    "        words = []\n",
+    "        for segment in text:\n",
+    "            if not segment:\n",
+    "                continue\n",
+    "            if self.special_tokens and segment in self.special_tokens:\n",
+    "                # Handle special tokens - they should be encoded as single tokens\n",
+    "                special_token_bytes = segment.encode(\"utf-8\")\n",
+    "                words.append([special_token_bytes])\n",
+    "            else:\n",
+    "                for match in re.finditer(PAT, segment):\n",
+    "                    token = match.group()\n",
+    "                    words.append([bytes([x]) for x in token.encode(\"utf-8\")])\n",
+    "\n",
+    "        final_words = []\n",
+    "        for word in words:            \n",
+    "            while True:\n",
+    "                best_merge = None\n",
+    "                best_pos = -1\n",
+    "\n",
+    "                for i in range(len(word) - 1):\n",
+    "                    pair = (word[i], word[i + 1])\n",
+    "                    if pair in self.merges:\n",
+    "                        merge_priority = self.merges.index(pair)\n",
+    "                        if best_merge is None or merge_priority < best_merge[1]:\n",
+    "                            best_merge = (i, merge_priority)\n",
+    "                            best_pos = i\n",
+    "\n",
+    "                if best_merge is None:\n",
+    "                    break\n",
+    "\n",
+    "                # Apply the best merge\n",
+    "                word = (\n",
+    "                    word[:best_pos]\n",
+    "                    + [word[best_pos] + word[best_pos + 1]]\n",
+    "                    + word[best_pos + 2 :]\n",
+    "                )\n",
+    "            final_words.append(word)\n",
+    "\n",
+    "        # print(final_words)\n",
+    "\n",
+    "        tokenized_words = []     # print(word)\n",
+    "        for word in final_words:\n",
+    "            tokenized_word = []\n",
+    "            for i in word:\n",
+    "                tokenized_word.append(self.vocab_dict.get(i,\"<UNK>\"))\n",
+    "            tokenized_words.extend(tokenized_word)\n",
+    "        return tokenized_words\n",
+    "    \n",
+    "    def encode_iterable(self, iterable):\n",
+    "        for item in iterable:\n",
+    "            yield self.encode(item)\n",
+    "\n",
+    "    def decode(self, tokens):\n",
+    "        \"\"\"Decode token IDs back to text\"\"\"\n",
+    "        # Step 1: Convert IDs to tokens\n",
+    "        tokens = [self.vocab.get(token_id,\"<UNK>\")for token_id in tokens]\n",
+    "        \n",
+    "        # Step 2: Concatenate all bytes\n",
+    "        full_bytes = b''.join(tokens)\n",
+    "        \n",
+    "        # Step 3: Decode to string\n",
+    "        text = full_bytes.decode('utf-8')\n",
+    "        \n",
+    "        return text\n",
+    "\n",
+    "\n",
+    "tokenizer = Tokenizer.from_file(\"gpt2_vocab.json\", \"../data/results/merges.pkl\",[\"<|endoftext|>\", \"<|endoftext|><|endoftext|>\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Héllò hôw <|endoftext|><|endoftext|> are ü? 🙃<|endoftext|>'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.decode(tokenizer.encode(\"Héllò hôw <|endoftext|><|endoftext|> are ü? 🙃<|endoftext|>\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from multiprocessing import Pool\n",
+    "import regex as re\n",
+    "import pickle\n",
     "\n",
-    "def square(x):\n",
-    "    return "
+    "PAT = r\"\"\"'(?:[sdmt]|ll|ve|re)| ?\\p{L}+| ?\\p{N}+| ?[^\\s\\p{L}\\p{N}]+|\\s+(?!\\S)|\\s+\"\"\"\n",
+    "\n",
+    "vocab_path = \"../data/results/vocab.pkl\"\n",
+    "merges_path = \"../data/results/merges.pkl\"\n",
+    "\n",
+    "with open(merges_path, \"rb\") as f:\n",
+    "    merges = pickle.load(f)\n",
+    "\n",
+    "with open(vocab_path, \"rb\") as f:\n",
+    "    vocab = pickle.load(f)\n",
+    "\n",
+    "# print(vocab)\n",
+    "\n",
+    "vocab_dict = {v: k for k, v in vocab.items()}\n",
+    "\n",
+    "chunk = \"Hello, world! This is a test. <|endoftext|>\"\n",
+    "special_tokens = [\"<|endoftext|>\"]\n",
+    "\n",
+    "special_token_pattern = \"|\".join(re.escape(token) for token in special_tokens)\n",
+    "\n",
+    "PAT = r\"\"\"'(?:[sdmt]|ll|ve|re)| ?\\p{L}+| ?\\p{N}+| ?[^\\s\\p{L}\\p{N}]+|\\s+(?!\\S)|\\s+\"\"\"\n",
+    "\n",
+    "text = re.split(f\"({special_token_pattern})\", chunk)\n",
+    "\n",
+    "words = []\n",
+    "for segment in text:\n",
+    "    if not segment:\n",
+    "        continue\n",
+    "    if segment in special_tokens:\n",
+    "        continue\n",
+    "    else:\n",
+    "        for match in re.finditer(PAT, segment):\n",
+    "            token = match.group()\n",
+    "            words.append([bytes([x]) for x in token.encode(\"utf-8\")])\n",
+    "\n",
+    "final_words = []\n",
+    "for word in words:\n",
+    "    # print(\"processing word\",word,\"\\n\")\n",
+    "    \n",
+    "    while True:\n",
+    "        i = 0\n",
+    "        merge_found = False\n",
+    "        while i < len(word) - 1:\n",
+    "            if (word[i],word[i+1]) in merges:\n",
+    "                word = word[:i] + [word[i] + word[i+1]] + word[i+2:]\n",
+    "                merge_found = True\n",
+    "                break\n",
+    "            i = i+1\n",
+    "        if not merge_found:\n",
+    "            break\n",
+    "    final_words.append(word)\n",
+    "\n",
+    "# print(final_words)\n",
+    "\n",
+    "tokenized_words = []     # print(word)\n",
+    "for word in final_words:\n",
+    "    tokenized_word = []\n",
+    "    for i in word:\n",
+    "        tokenized_word.append(vocab_dict.get(i,\"<UNK>\"))\n",
+    "    tokenized_words.extend(tokenized_word)\n",
+    "        # print(vocab_dict[i])\n",
+    "# for word,token in zip(final_words,tokenized_words):\n",
+    "#     print(word,\"==>\",token)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(tokenized_words)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
